# HotplateController

./: .gitignore  .gitmodules  CMakeLists.txt  FreeRTOSConfig.h
src/: controller.cpp  controller.hpp  display.cpp  display.hpp  heater.cpp  heater.hpp  main.c  pidController.cpp  pidController.hpp  tempProbe.cpp  tempProbe.hpp  utils.hpp
